--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "googleapis": "^118.0.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.5"
+    "mongoose": "^7.0.5",
+    "nodemailer": "^6.9.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -25,6 +27,7 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.16.0",
+    "@types/nodemailer": "^6.4.7",
     "@types/validator": "^13.7.15",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
